# tinyRendererG2

./: .gitignore  CMakeLists.txt  README.md  design.pptx  mpm_cfg.json  readme.pptx
UI/: UI_event.cpp  UI_event.h  UI_layout.cpp  UI_layout.h
UI/include/: UI_layout.h
UI/src/: UI_event.cpp  UI_layout.cpp  user_control.cpp
app/src/: main.cpp
asset/material/: general_phong.json  simple.json
asset/scene/: demo_scene.json  scene.json  scene_sphere.json
asset/shader/: general_phong.vert  gizmo.frag  instance_phong.frag  instance_phong.vert
backup/: old_main.cpp  old_physics.cpp  sphere_tet_draw.cpp
cmake.in/: src_config.h.in
include/: AuxiliaryRenderPipeline.h  UI_layout.h  camera.h  entity.h  file_system.h  general_phong_rp.h  grabber.h  intellisense_cuda_intrinsics.h  mesh.h  position_based_dynamics.h  projective_dynamics.h  ray_caster.h  renderer.h  resource_manager.h  rhi.h  rhi_buffer.h  scene_ele.h  shader.h  tiny_phyx.h  tiny_renderer.h  transform.h  user_control.h  window_sys.h
log/: 2  3  4  A_sparse.txt  corotated_pbd
mpm/: MCShader.vs  MC_Table.txt  glad.c  helper_cuda.h  helper_string.h  instancing.fs  instancing.vs  render.cpp  render.h  shader.fs  shader.vs  svd3_cuda.h  test.cu  tool.fs  tool.vs
pyscripts/: gen_cloth.py
pyscripts/mc/: mc.txt  trans.py
pyscripts/tets/: convert_tet_to_triangles.py  pytet.py  render_test.py  skinning.py  test.py  utils.py
render/include/: entity.h  fps.h  grabber.h  light.h  material.h  mpm.h  mpm_impl.h  ray_caster.h  renderer.h  resource_manager.h  rhi_shader.h  scene.h  scene3d.h  tiny_renderer.h  util_physics.h  utils_scene.h
render/include/render_pipeline/: general_phong_rp.h
render/src/: entity.cpp  grabber.cpp  mesh.cpp  resource_manager.cpp  rhi.cpp  transform.cpp
resource/material/: general_phong.json  gizmo.json  instance_phong.json  line.json  plane.json
resource/scene/: demo_scene.json  scene.json
resource/shader/: gizmo.vert  instance_phong.frag  instance_phong.vert  simple.frag  simple.vert
resource/simulation/: PBD_params  PBD_params2  PD_params  PD_params2  sim_params_pd  sim_paramsaaa  sim_paramsaass
shader/: simple.frag  simple.vert
simulation/: constraint.cpp  constraint.h  constraint_PBD.cpp  constraint_PBD.h  constraint_PD.cpp  constraint_PD.h  corotated_constraint_PBD.cpp  phymesh.h  projective_dynamics.h  simulation_type.h  solver.h  solver_PBD.cpp  solver_PD.cpp
simulation/include/: collision_pbd.h  constraint_PBD.h  phymesh.h  position_based_dynamics.h  simulation_type.h  solver.h  tiny_phyx.h
simulation/src/: collision_PBD.cpp  corotated_constraint_PBD.cpp  position_based_dynamics.cpp  projective_dynamics.cpp  solver_PBD.cpp  solver_PD.cpp  tiny_phyx.cpp  tiny_phyx_PBD.cpp  tiny_phyx_PD.cpp
src/: UI_layout.cpp  entity.cpp  file_system.cpp  fps.cpp  grabber.cpp  light.cpp  main.cpp  material.cpp  mesh.cpp  mpm.cpp  mpm_impl_cpu.cpp  mpm_impl_gpu.cu  position_based_dynamics.cpp  projective_dynamics.cpp  ray_caster.cpp  resource_manager.cpp  rhi.cpp  rhi_buffer.cpp  rhi_shader.cpp  scene.cpp  scene3d.cpp  scene_ele.cpp  shader.cpp  snowflake.cpp  tiny_phyx.cpp  transform.cpp  user_control.cpp  utils_scene.cpp  window_sys.cpp
utility/include/: cu_hack.h  file_system.h  snowflake.h  spatial_hash.h  ticktock.h
utility/src/: file_system.cpp
